--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -25,6 +25,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
-        context: .
+        context: ./db
+        file: ./db/Dockerfile
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/dvdrental:latest
