Emove redundant revoke of schema privileges for public role.

--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -4,6 +4,15 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'db/Dockerfile'
+      - 'db/initdb.sh'
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'db/Dockerfile'
+      - 'db/initdb.sh'
   workflow_dispatch:
 
 jobs:
