Remove build paths, now only on main.

--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -4,15 +4,15 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'db/Dockerfile'
-      - 'db/initdb.sh'
+    # paths:
+    #   - 'db/Dockerfile'
+    #   - 'db/initdb.sh'
   pull_request:
     branches:
       - main
-    paths:
-      - 'db/Dockerfile'
-      - 'db/initdb.sh'
+    # paths:
+    #   - 'db/Dockerfile'
+    #   - 'db/initdb.sh'
   workflow_dispatch:
 
 jobs:
@@ -24,7 +24,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
+      uses: docker/setup-qemu-action@v3
       with:
         platforms: all
 
