--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -1,47 +1,21 @@
-name: Build and Push Docker Image
+name: Build and Push DVDRental Docker Image
 
 on:
   push:
     branches:
       - main
-    # paths:
-    #   - 'db/Dockerfile'
-    #   - 'db/initdb.sh'
   pull_request:
     branches:
       - main
-    # paths:
-    #   - 'db/Dockerfile'
-    #   - 'db/initdb.sh'
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-      with:
-        platforms: all
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v6
-      with:
-        context: ./db
-        file: ./db/Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/dvdrental:latest
-        platforms: linux/amd64,linux/arm64
+  build-and-push:
+    uses: SirSplat/workflows/.github/workflows/build-and-push-docker-image.yaml@main
+    with:
+      directory: ./db
+      tag: latest
+      image_name: dvdrental
+    secrets:
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
