Add runner and step debug for shared workflow.

--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -16,6 +16,8 @@ jobs:
       directory: ./db
       tag: latest
       image_name: dvdrental
+      runner_debug: true
+      step_debug: true
     secrets:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
