--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -16,8 +16,8 @@ jobs:
       directory: ./db
       tag: latest
       image_name: dvdrental
-      runner_debug: true
-      step_debug: true
+      runner_debug: false
+      step_debug: false
     secrets:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
